# cpp_gc

./: CMakeLists.txt  main.cpp  main.h
core/: AutomanObject.cpp  AutomanObject.h  CMakeLists.txt  ReadeMe.txt  Reflection.h
test/: CMakeLists.txt  ReadMe.txt  Tests.cpp  Tests.h
